Update my style based in a layout developed with figma

--- a/index.html
+++ b/index.html
@@ -15,19 +15,19 @@
     <main>
         <section class="user-login">
             <div class="box-elements">
-                <div class="login">
+                <div class="login" data-atrb="login">
                     <label for="username-login">Username</label>
                     <input type="text" name="input-login" id="username-login">
                     <label for="password-login">Password</label>
-                    <input type="text" name="input-login" id="password-login">
+                    <input type="password" name="input-login" id="password-login">
                 </div>
-                <div class="sing-up">
+                <div class="sing-up" data-atrb="sing-up" hidden>
                     <label for="username-sing-up">Username</label>
                     <input type="text" name="input-sing-up" id="username-sing-up">
                     <label for="password-sing-up">Password</label>
-                    <input type="text" name="input-sing-up" id="password-sing-up">
+                    <input type="password" name="input-sing-up" id="password-sing-up">
                     <label for="retry-password-sing-up">Retry your password</label>
-                    <input type="text" name="input-sing-up" id="retry-password-sing-up">
+                    <input type="password" name="input-sing-up" id="retry-password-sing-up">
                 </div>
                 <div class="btn-login-sing-up">
                     <button class="btn-login">Login</button>
@@ -35,7 +35,7 @@
                 </div>
             </div>
         </section>
-        <p class="dev">Developed by Ruan Narici</p>
+        <p class="dev">Developed by <a href="https://www.linkedin.com/in/ruan-narici-6a590416b/" target="_blank">Ruan Narici</a></p>
     </main>
     <script src="./assets/js/script.js"></script>
 </body>
