Update my file js

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                     <label for="password-login">Password</label>
                     <input type="password" name="input-login" id="password-login">
                 </div>
-                <div class="sing-up" data-atrb="sing-up" hidden>
+                <div class="sing-up hide" data-atrb="sing-up">
                     <label for="username-sing-up">Username</label>
                     <input type="text" name="input-sing-up" id="username-sing-up">
                     <label for="password-sing-up">Password</label>
@@ -30,8 +30,8 @@
                     <input type="password" name="input-sing-up" id="retry-password-sing-up">
                 </div>
                 <div class="btn-login-sing-up">
-                    <button class="btn-login">Login</button>
-                    <button class="btn-sing-up">Sing Up</button>
+                    <button class="btn-login active" data-btn="login">Login</button>
+                    <button class="btn-sing-up" data-btn="sing-up">Sing Up</button>
                 </div>
             </div>
         </section>
